# RobWork

./: .gitattributes  .gitignore  .gitlab-ci-common.yml  .gitlab-ci.yml  CMakeLists.txt
RobWork/ext/: CMakeLists.txt
RobWork/ext/assimp/code/: 3DSHelper.h  ASEParser.h  B3DImporter.h  BaseImporter.h  BaseProcess.h  BlobIOSystem.h  ByteSwapper.h  CInterfaceIOWrapper.h  CalcTangentsProcess.h  ComputeUVMappingProcess.h  ConvertToLHProcess.h  DefaultIOStream.h  DefaultIOSystem.h  FBXConverter.h  FBXProperties.h  FindDegenerates.h  FindInvalidDataProcess.h  FixNormalsStep.h  GenFaceNormalsProcess.h  GenVertexNormalsProcess.h  HMPFileData.h  HalfLifeFileData.h  IFCLoader.h  IFCUtil.h  ImproveCacheLocality.h  JoinVerticesProcess.h  LWOLoader.h  MD3FileData.h  MD3Loader.h  MD4FileData.h  MDCFileData.h  MDLDefaultColorMap.h  MakeVerboseFormat.h  MathFunctions.h  PlyLoader.h  PlyParser.h  RawLoader.h  RemoveComments.h  RemoveVCProcess.h  SceneCombiner.h  (+20 more)
RobWork/ext/fcl/fcl/: CMakeLists.txt
RobWork/ext/lua/VisualStudio2008/: lua.vcproj
RobWork/src/: CMakeLists.txt  RobWorkConfig.hpp.in
RobWork/src/rw/: CMakeLists.txt  RobWork.cpp  RobWork.hpp  geometry.hpp  invkin.hpp  math.hpp  proximity.hpp  robwork.hpp
RobWork/src/rw/common/: BINArchive.cpp  BINArchive.hpp  BoostXMLParser.cpp  CMakeLists.txt  ConcatVectorIterator.cpp  DOMParser.cpp  Event.hpp  ExtensionRegistry.cpp  ExtensionRegistry.hpp  FileCache.hpp  INIArchive.cpp  INIArchive.hpp  IOUtil.cpp  InputArchive.hpp  Log.cpp  OutputArchive.hpp  PairMap.hpp  Plugin.cpp  PropertyType.hpp  Ptr.hpp  ThreadTask.hpp  VectorIterator.cpp  types.hpp
RobWork/src/rw/geometry/: AABB.cpp  AABB.hpp  Box.cpp  Box.hpp  CMakeLists.txt  Cone.cpp  Cone.hpp  Contour2D.cpp  Contour2D.hpp  Contour2DUtil.cpp  ConvexHull2D.cpp  ConvexHull2D.hpp  ConvexHull3D.cpp  ConvexHull3D.hpp  Covariance.hpp  Cylinder.cpp  Cylinder.hpp  Delaunay.cpp  Delaunay.hpp  Geometry.hpp  GeometryData.hpp  GeometryFactory.cpp  GeometryFactory.hpp  GeometryUtil.cpp  GeometryUtil.hpp  GiftWrapHull2D.hpp  GiftWrapHull3D.cpp  GiftWrapHull3D.hpp  IncrementalHull.hpp  IndexedPolygon.hpp  IndexedTriMesh.cpp  IndexedTriMesh.hpp  IndexedTriangle.hpp  IntersectUtil.cpp  IntersectUtil.hpp  Line.cpp  Line.hpp  OBB.cpp  OBB.hpp  OBBCollider.hpp  (+26 more)
RobWork/src/rw/graphics/: CMakeLists.txt  DrawableNode.hpp  Model3D.cpp  (+4 more)
RobWork/src/rwlibs/: CMakeLists.txt  calibration.hpp
RobWork/src/sandbox/: AsciiPathSaver.hpp  CMakeLists.txt
RobWorkHardware/example/ur_rtde/: CMakeLists.txt  ur_rtde_test.cpp
RobWorkHardware/ext/ur_rtde/: CMakeLists.txt  README.md
RobWorkSim/: CMakeLists.txt  config.cmake  config.cmake.template
RobWorkSim/cmake/: RobWorkSimConfig.cmake.in  RobWorkSimSetup.cmake  packing.cmake
RobWorkSim/cmake/Modules/: FindODE.cmake
RobWorkSim/example/SimTaskPlugin/: CMakeLists.txt  SimTaskPlugin.cpp  SimTaskPlugin.hpp
RobWorkSim/example/SimTaskVisPlugin/: CMakeLists.txt  SimTaskVisPlugin.cpp  SimTaskVisPlugin.hpp
RobWorkSim/example/SimTemplatePlugin/: CMakeLists.txt  SimTemplatePlugin.cpp  SimTemplatePlugin.hpp
RobWorkSim/example/bootstrap/: CMakeLists.txt
RobWorkSim/example/tools/: CMakeLists.txt
RobWorkSim/example/tutorials/: CMakeLists.txt
RobWorkSim/plugin/: CMakeLists.txt  GLViewRW.cpp  GraspRestingPoseDialog.cpp  GraspRestingPoseDialog.hpp  GraspSelectionDialog.cpp  GraspSelectionDialog.ui  GraspTableGeneratorDialog.cpp  GraspTableGeneratorDialog.hpp  GraspTableGeneratorPlugin.ui  JointControlDialog.hpp  RWSimPlugin.cpp  RWSimPlugin.hpp  RWSimulatorPlugin.cpp  RWSimulatorPlugin.hpp  RestingPoseDialog.cpp  SimUtilityPlugin.cpp  TactileSensorDialog.cpp  TactileSensorDialog.hpp  TactileSensorDialog.ui  ui_CreateEngineDialog.h  ui_GraspRestingPoseDialog.h  ui_ODESimCfgForm.h  ui_RestingPoseDialog.h  ui_SDHPlugin.h  ui_SensorOutputGui.h  ui_SimCfgDialog.h  ui_SupportPoseAnalyserDialog.h  ui_TactileSensorDialog.h
RobWorkSim/src/: CMakeLists.txt
RobWorkSim/src/control/: PDController.cpp  PDController.hpp  SyncPDController.hpp  VelRampController.hpp
RobWorkSim/src/drawable/: RenderCircles.cpp  RenderCircles.hpp  RenderContacts.cpp  RenderGhost.hpp  RenderPlanes.hpp  RenderPoints.cpp  RenderPoints.hpp
RobWorkSim/src/dynamics/: Body.hpp  DynamicUtil.cpp  DynamicUtil.hpp  FixedBody.hpp  FixedDevice.cpp  KinematicBody.cpp  KinematicBody.hpp  RigidBody.cpp  RigidDevice.hpp  RigidJoint.cpp
RobWorkSim/src/loaders/: DynamicWorkCellLoader.cpp
RobWorkSim/src/plugin/: GraspRestingPoseDialog.hpp  GraspSelectionDialog.cpp  GraspSelectionDialog.hpp  RWSimPlugin.hpp  RWSimulatorPlugin.cpp  TactileSensorDialog.hpp
RobWorkSim/src/rwsim/: CMakeLists.txt
RobWorkSim/src/sensors/: BodyContactSensor.cpp  BodyContactSensor.hpp  SimulatedTactileSensor.hpp  TactileArraySensor.cpp  TactileArraySensor.hpp  TactileMultiAxisSimSensor.hpp
RobWorkSim/src/simulator/: Simulator.hpp  ThreadSimulator.cpp
RobWorkSim/src/util/: CircleModel.hpp  CollisionFreeSampler.cpp  GraspPolicy.cpp  GraspPolicy.hpp  GraspPolicyFactory.cpp  GraspPolicyFactory.hpp  GraspStrategy.cpp  GraspStrategy.hpp  GraspStrategyFactory.cpp  GraspStrategyFactory.hpp  PreshapeGraspStrategy.cpp  PreshapeGraspStrategy.hpp  PreshapeSampler.cpp  RestingPoseGenerator.hpp  SpherePoseSampler.hpp
RobWorkSim/test/: CMakeLists.txt  GraspTableConvert.cpp  LoadGraspTableKTH.cpp  ModelPropertyTest.cpp  ModelStablePoseTest.cpp  RWSimTest.cpp  ScaleWorkCell.cpp
RobWorkSim/test/tasksimulation/: GraspTaskSimulation.cpp
RobWorkStudio/src/: CMakeLists.txt  ProgramOptions.hpp  RobWorkStudioConfig.hpp  RobWorkStudioConfig.hpp.in  main.cpp
RobWorkStudio/src/components/: CMakeLists.txt
RobWorkStudio/src/plugins/: CMakeLists.txt
RobWorkStudio/src/rws/: ArcBallController.cpp  CMakeLists.txt  Event.hpp  RWStudioView3D.cpp  RWStudioView3D.hpp  RobWorkStudio.cpp  RobWorkStudio.hpp  RobWorkStudioPlugin.cpp  RobWorkStudioPlugin.hpp  SceneOpenGLViewer.cpp  SceneOpenGLViewer.hpp  ViewGL.cpp  ViewGL.hpp  rwstudio_resources.qrc  ui_AboutBox.h
RobWorkStudio/src/rwslibs/: CMakeLists.txt
RobWorkStudio/src/sandbox/: CMakeLists.txt
(+1321 files in other folders)
